--- a/ksc.css
+++ b/ksc.css
@@ -1,18 +1,34 @@
+body {
+    --ksc-background: #004b93;
+    --ksc-color: #fff;
+}
+
 .next-game {
-    background: #004b93; 
+    background: var(--ksc-background); 
     text-align: center;
     padding: 16px;box-shadow:0 3px 1px -2px #0003, 0 2px 2px #00000024, 0 1px 5px #0000001f;
 
 }
 
 .next-game > div {
-    color: #fff;
+    color: var(--ksc-color);
 }
 
 .next-game .teams {
-    font-size: 24px;
+    font-size: 20px;
+    font-style: italic;
 }
 
 .next-game .time {
-    font-size: 20px;
+    font-size: 18px;
+    font-style: italic;
+}
+
+.article__teams-header {
+    background: var(--ksc-background); 
+    color: var(--ksc-color);
+}
+
+.article__teams-header h1 {
+    color: var(--ksc-color);
 }
