--- a/style/next-game.css
+++ b/style/next-game.css
@@ -43,7 +43,7 @@ body {
     font-style: italic;
 }
 
-.puff__image, .article-image {
+.puff__image, .article-image img {
     box-shadow:0 3px 1px -2px #0003, 0 2px 2px #00000024, 0 1px 5px #0000001f;
 }
 
